advanced css training files added for reference

--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,18 @@ img {
   background: rgba(0, 0, 0, 0.6);
 }
 
+/* Yukaridaki olayi asagidaki sekilde header'a ekleyerek de yapabilirdik: */
+
+.header::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
 .hero * {
   z-index: 10;
 }
